all service common sections completed

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,29 @@ h4 {
 }
 
 @font-face {
+  font-family: "Nunito";
+  src: url("/Fonts/Nunito-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+.nunito-bold {
+  font-family: "Nunito", sans-serif !important;
+}
+
+@font-face {
+  font-family: "Nunito";
+  src: url("/Fonts/Nunito-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+.nunito-medium,
+h4 {
+  font-family: "Nunito", sans-serif !important;
+}
+
+@font-face {
   font-family: "ClashGrotesk";
   src: url("/Fonts/ClashGrotesk-Medium.ttf") format("truetype");
   font-weight: 500;
@@ -75,6 +98,11 @@ h3 {
 
 .left-right-bottom-shadow {
   box-shadow: -4px 4px 10px rgba(0, 0, 0, 0.1), 4px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.all-sides-shadow {
+  box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1), -4px 0px 10px rgba(0, 0, 0, 0.1),
+    4px 0px 10px rgba(0, 0, 0, 0.1), 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 /*  */
