--- a/app/globals.css
+++ b/app/globals.css
@@ -132,5 +132,38 @@ h3 {
     12px 0px 10px rgba(0, 0, 0, 0.1), 0px 12px 10px rgba(0, 0, 0, 0.1);
 }
 
-/*  */
+/* Feature Item Animation */
+.feature-item {
+  color: #333;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 4px;
+  transition: transform 0.3s ease;
+  text-align: center;
+  width: fit-content;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.feature-item::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: #050C06;
+  transition: left 0.7s ease-in-out;
+}
+
+.feature-item:hover::after {
+  left: 0;
+}
+
+.feature-item:hover {
+  transform: translateY(-2px);
+}
 
