style: update ClutchWidget and TechStackSection for improved layout and responsiveness
- Set ClutchWidget width to 100% for better adaptability in various screen sizes.
- Added data-width attribute to ClutchWidget for enhanced configuration.
- Adjusted indentation in TechStackSection for cleaner code structure.

--- a/app/globals.css
+++ b/app/globals.css
@@ -171,3 +171,6 @@ h3 {
 .swiper-pagination-bullet-active {
   background-color: #000209 !important; /* Active dot color */
 }
+.clutch-widget{
+  width: 100% !important;
+}
