feat: enhance non-profits page with new sections and improve footer links
- Added multiple sections to the NonProfitsPage for better content organization, including NonProfitSection, NonProfitStatsSection, EmpoweringSection, DifferentiateSection, OurPortfolioSection, and ContactUsSection.
- Updated footer links to reflect new paths for Terms and Privacy policies, enhancing user navigation.
- Adjusted footer layout for improved responsiveness and visual consistency.
- Added CSS rule to prevent horizontal overflow on the body element.

--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,10 @@
 
 /*  */
 
+body{
+  overflow-x: hidden;
+}
+
 @font-face {
   font-family: "Nunito";
   src: url("/Fonts/Nunito-Regular.ttf") format("truetype");
